--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Project Hub</title>
+    <title>IT010</title>
 </head>
 <body>
-    <h1>Welcome to my GitHub Pages site</h1>
+    <h1>Welcome to IT010 Course</h1>
 
     <p>
-        <a href="Day2_Lesson.html">Open Page 1</a>
+        <a href="Day2_Lesson.html">Day2_Lesson</a>
     </p>
     <p>
-        <a href="Day3_Lesson1.html">Open Page 2</a>
+        <a href="Day3_Lesson1.html">Day3_Lesson1</a>
     </p>
     <p>
-        <a href="Day3_Lesson2.html">Open Page 2</a>
+        <a href="Day3_Lesson2.html">Day3_Lesson2</a>
     </p>
 </body>
 </html>
